# Python-Programming-Basics

./: README.md
python_class_02/: api.py  image_operation.py  libraries.py  making_library.py  names.txt  packages.py  ptest_square_fn.py  ptest_str_fn.py  square_fn.py  store_data.py  str_function.py  students.csv  testing_sqaure_fn.py  using_library.py
uit-api-class/: pyproject.toml
uit-api-class/uitclass/: conditionals.py  main.py
uitclass/: conjunctions.py  dict.py  exceptions.py  functions.py  game.py  list.py  loop.py  match.py  number.py  parity.py  print_command.py
