[tool.poetry]
name = "uitclass"
version = "0.1.0"
description = ""
authors = ["muhammadawaisonline <muhammadawaisonline00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
unicorn = {extras = ["standard"], version = "^2.0.1.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
